// IslamResearch Platform Database Schema
// Generated for dbdiagram.io
// Last updated: 2026-04-15 — Full multilingual search architecture

//// ENUMS

Enum resource_type {
  quran
  quran_translation
  quran_irab
  hadith
  tafsir
  syarh
  language
  quranic_action
  other
}

Enum pipeline_id {
  quran_api_flow         [note: 'Quran Arabic text via alquran.cloud API — book-level trigger']
  quran_translation_flow [note: 'Quran translation editions via API — book-level trigger']
  quran_irab_flow        [note: 'I\'rab grammatical analysis books — sentence-level']
  tafsir_amal_flow       [note: 'Amali Tafseer custom TXT parser — sentence-level']
  standard_txt_flow      [note: 'Generic .txt books (SpaCy + Ollama) — sentence-level']
}

Enum script_type {
  arabic [note: 'Arabic script (Unicode range 0600–06FF)']
  latin  [note: 'Latin script — covers transliterations and translations']
}

Enum action_type {
  search_query
  view_item
  explore_root
  apply_filter
  open_tab
  close_tab
  split_pane
}

Enum feedback_status {
  pending
  approved
  rejected
}

Enum word_source {
  main_text
  translation
}

Enum user_role {
  admin
  editor
  researcher
}

Enum entity_type {
  person
  location
  event
  concept
  book
}

//// CORE TABLES

Table users [headercolor: #1E3A8A] {
  id uuid [primary key]
  name varchar
  email varchar [unique]
  password varchar
  role user_role [default: 'researcher']
  metadata jsonb
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [note: 'Soft Deletes']
}

Table scholars [headercolor: #1D4ED8] {
  id uuid [primary key]
  name varchar
  metadata jsonb [note: 'Bio, birth/death years, titles']
}

Table source_books [headercolor: #2563EB] {
  id uuid [primary key, note: 'Entry point for all research data']
  title varchar
  scholar_id uuid [ref: > scholars.id]
  resource_type resource_type
  pipeline_id pipeline_id [default: 'standard_txt_flow', note: 'Routes to the correct Prefect AI pipeline']
  language varchar [note: 'ISO code of source language (e.g. ar)']
  status varchar [note: 'pending | processing | completed | failed']
  metadata jsonb [note: 'Bibliographical details']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [note: 'Soft Deletes']
}

//// TAXONOMY TABLES

Table taxonomies [headercolor: #3B82F6] {
  id uuid [primary key]
  parent_id uuid [ref: > taxonomies.id]
  path ltree [note: 'Materialized path for optimized hierarchical queries']

  // Arabic-first naming
  name varchar [note: 'Arabic canonical label — stored in sentences.metadata.categories[]']
  name_ar varchar [note: 'Dedicated Arabic column for SQL filtering']
  name_en varchar [note: 'English display name for UI']
  name_transliteration varchar [note: 'ALA-LC transliteration (slug source)']

  slug varchar [unique, note: 'Derived from name_transliteration']
  embedding_ar "vector(1024)" [note: 'Arabic name embedding — for Arabic search against taxonomy']
  metadata jsonb [note: 'Mirrors names + level for JSONB queries']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [note: 'Soft Deletes']

  indexes {
    path [type: gist]
    name_ar
    embedding_ar [type: hnsw, note: 'ANN search when query is Arabic']
  }
}

Table source_book_taxonomy [headercolor: #BFDBFE] {
  book_id uuid [ref: > source_books.id]
  taxonomy_id uuid [ref: > taxonomies.id]

  indexes {
    (book_id, taxonomy_id) [unique]
  }
}

//// KNOWLEDGE GRAPH & ENTITY TABLES

Table entities [headercolor: #047857, note: 'Unified Knowledge Graph nodes (People, Places, Concepts)'] {
  id uuid [primary key]
  canonical_name varchar [unique]
  entity_type entity_type
  aliases jsonb [note: 'Array of common abbreviations or alternative names']
  description text [note: 'Enriched summary from LLM or Wikipedia']
  wikipedia_url varchar
  metadata jsonb [note: 'Birth/death, coordinates, attributes']
  embedding "vector(1024)" [note: 'Semantic embedding for entity search']
  last_enriched_at timestamp [note: 'Guardrail: timestamp of last AI/Wikipedia enrichment']
  created_at timestamp
  updated_at timestamp

  indexes {
    canonical_name [unique]
    entity_type
    embedding [type: hnsw]
  }
}

Table entity_relationships [headercolor: #065F46, note: 'Knowledge Graph edges (Source ➔ Predicate ➔ Target)'] {
  id uuid [primary key]
  source_entity_id uuid [ref: > entities.id]
  target_entity_id uuid [ref: > entities.id]
  relationship_type varchar [note: 'e.g. "Migrated To", "Narrated From"']
  evidence_sentence_id uuid [ref: > sentences.id, note: 'The specific text that proves this relation']
  confidence float [default: 1.0]
  created_at timestamp
  updated_at timestamp

  indexes {
    (source_entity_id, target_entity_id, relationship_type, evidence_sentence_id) [unique]
  }
}

Table sentence_entity [headercolor: #10B981, note: 'Pivot: links resolved entities to sentences'] {
  sentence_id uuid [ref: > sentences.id]
  entity_id uuid [ref: > entities.id]
  confidence float [default: 1.0]
  context_metadata jsonb [note: 'Specific context snippets for this match']
  
  indexes {
    (sentence_id, entity_id) [unique]
  }
}

Table entity_ambiguity_queue [headercolor: #34D399, note: 'Human-in-the-loop queue for low-confidence AI matches'] {
  id uuid [primary key]
  sentence_id uuid [ref: > sentences.id]
  surface_name varchar [note: 'The name as it appeared in raw text (e.g. "Umar")']
  candidate_entities jsonb [note: 'List of potential matches suggested by AI']
  context_block text [note: 'Context sentences for manual review']
  status varchar [default: 'pending', note: 'pending | approved | rejected']
  created_at timestamp
  updated_at timestamp
}

//// SENTENCE TABLES

Table sentence_jobs [headercolor: #93C5FD] {
  id uuid [primary key]
  sentence_id uuid [ref: > sentences.id]
  needs_embedding boolean [default: false]
  needs_translation boolean [default: false]
  needs_transliteration boolean [default: false]
  target_language varchar [note: 'ISO translation target (e.g. id, en)']
  transliteration_scheme varchar [note: 'e.g. ala_lc']
  status varchar [note: 'pending | processing | failed | completed']
  attempts int [default: 0]
  error_log text
  completed_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table sentences [headercolor: #BFDBFE] {
  id uuid [primary key]
  source_book_id uuid [ref: > source_books.id]
  resource_type resource_type
  sequence_number int
  sentence_text text [note: 'Core Arabic content (with harakat)']
  metadata jsonb [note: '''
    AI output (Arabic-first):
    - categories: list[str]  — Arabic taxonomy labels e.g. ["التفسير"]
    - category: str          — Primary label (legacy single-value)
    - surah_id, ayah_number  — Quran records
    - segment_type           — Tafseer: "commentary" | "lesson"
    - linked_ayah            — Cross-reference to Quran ayah
    NOTE: tags now normalised → sentence_tag pivot
  ''']
  embedding_ar "vector(1024)" [note: 'Arabic source embedding (primary ANN index)']
  created_at timestamp
  updated_at timestamp

  indexes {
    metadata [name: 'idx_sentences_metadata', type: gin]
    source_book_id
    embedding_ar [type: hnsw]
  }
}

Table sentence_transliterations [headercolor: #BFDBFE, note: 'Romanized versions of Arabic sentences'] {
  id uuid [primary key]
  sentence_id uuid [ref: > sentences.id]
  scheme varchar [note: 'e.g. ala_lc, dmg']
  transliteration_text text
  created_at timestamp
  updated_at timestamp

  indexes {
    (sentence_id, scheme) [unique]
  }
}

//// CENTRAL TRANSLATIONS

Table translations [headercolor: #F59E0B, note: 'Unified translations for any entity'] {
  id uuid [primary key]
  language varchar [note: 'ISO code (e.g. id, en)']
  translation_text text
  embedding "vector(1024)" [note: 'ANN index for Latin queries']
  metadata jsonb [note: 'edition, model, confidence']
  created_at timestamp
  updated_at timestamp

  indexes {
    embedding [type: hnsw]
  }
}

Table translatables [headercolor: #FCD34D, note: 'Polymorphic Pivot: Connects translations to entities'] {
  translation_id uuid [ref: > translations.id]
  translatable_id uuid [note: 'ID of sentence, tag, or entity']
  translatable_type varchar [note: 'e.g., App\\Models\\Sentence']

  indexes {
    (translatable_id, translatable_type, translation_id) [unique]
  }
}

//// LINGUISTIC LEXICON TABLES

Table words [headercolor: #059669, note: 'Unified table for all lexical tokens and roots'] {
  id uuid [primary key]
  root_id uuid [ref: > words.id, note: 'Self-reference. Null means this IS the root']
  word_raw varchar [note: 'Text with harakat (e.g., يُؤْمِنُونَ)']
  word_clean varchar [note: 'Text without harakat (e.g., يؤمنون)']
  transliteration varchar [note: 'Romanized form']
  translation varchar [note: 'Base dictionary meaning']
  embedding "vector(1024)" [note: 'Dense semantic representation']
  metadata jsonb
  created_at timestamp
  updated_at timestamp

  indexes {
    word_clean [note: 'Quick search on unvowelled text']
  }
}

Table sentence_word [headercolor: #10B981, note: 'Pivot: links words back to occurrence in sentence'] {
  sentence_id uuid [ref: > sentences.id]
  word_id uuid [ref: > words.id]
  source_type word_source [note: 'main_text or translation']
  positions "integer[]" [note: 'Word indices within sentence']

  indexes {
    (word_id, sentence_id) [unique]
  }
}

//// SEARCH TABLES

Table searches [headercolor: #4F46E5] {
  id uuid [primary key]
  query varchar [unique, note: 'Raw query text']
  script_type script_type [note: 'Detected: arabic | latin — determines which embedding indexes are queried']
  embedding "vector(1024)" [note: 'Query embedding — compared against matching index based on script_type']
  created_at timestamp

  indexes {
    embedding [type: hnsw, note: 'Optional: find similar past queries']
  }
}

Table user_searches [headercolor: #6366F1] {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  search_id uuid [ref: > searches.id]
  filters jsonb [note: 'Applied filters: taxonomy, scholar, language, resource_type']
  results_count int
  created_at timestamp

  indexes {
    created_at
    user_id
  }
}

//// USER PERSONALIZATION TABLES

Table user_workspaces [headercolor: #312E81] {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  name varchar
  is_active boolean
  layout_state jsonb
  updated_at timestamp
}

Table user_journeys [headercolor: #4338CA] {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  action_type action_type
  target_sentence_id uuid [ref: > sentences.id]
  target_search_id uuid [ref: > searches.id]
  context_data jsonb
  created_at timestamp

  indexes {
    created_at
    user_id
  }
}

Table collections [headercolor: #818CF8] {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  name varchar
  is_public boolean
  metadata jsonb
  deleted_at timestamp [note: 'Soft Deletes']
}

Table collection_items [headercolor: #A5B4FC] {
  id uuid [primary key]
  collection_id uuid [ref: > collections.id]
  itemable_type varchar
  itemable_id uuid
  raw_query text
  metadata jsonb
  created_at timestamp
}

Table user_feedbacks [headercolor: #C7D2FE] {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  sentence_id uuid [ref: > sentences.id]
  search_query varchar
  relevance_score int [note: '0 to 100']
  status feedback_status
  reviewed_by uuid [ref: > users.id]
  resolved_at timestamp
}

Table user_habits [headercolor: #E0E7FF] {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  sentence_id uuid [ref: > sentences.id]
  checked_at timestamp

  indexes {
    checked_at
    user_id
  }
}

//// TABLE GROUPS

TableGroup "Core Infrastructure" {
  users
  scholars
  source_books
}

TableGroup "Taxonomy" {
  taxonomies
  source_book_taxonomy
}

TableGroup "Knowledge Graph" {
  entities
  entity_relationships
  sentence_entity
  entity_ambiguity_queue
}

TableGroup "Sentences & Language" {
  sentence_jobs
  sentences
  sentence_transliterations
}

TableGroup "Global Translations" {
  translations
  translatables
}

TableGroup "Linguistic Lexicon" {
  words
  sentence_word
}

TableGroup "Search" {
  searches
  user_searches
}

TableGroup "User Personalization" {
  user_workspaces
  user_journeys
  collections
  collection_items
  user_feedbacks
  user_habits
  user_notebooks
}

Enum notebook_view_mode {
  article
  presentation
}

Table user_notebooks [headercolor: #312E81] {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  title varchar
  content_md text [note: 'Markdown content with Live Embed tags {{ embed:... }}']
  is_published boolean [default: false]
  view_mode notebook_view_mode [default: 'article']
  metadata jsonb
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [note: 'Soft Deletes']
}

// Polymorphic Relationships (Diagram Helpers)
Ref: sentences.id < translatables.translatable_id
Ref: entities.id < translatables.translatable_id
Ref: taxonomies.id < translatables.translatable_id
